--- a/build.gradle
+++ b/build.gradle
@@ -35,4 +35,9 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+
+	// These properties need to be set on the test JVM process
+	systemProperty("pact.provider.version", System.getenv("TRAVIS_COMMIT") == null ? "" : System.getenv("TRAVIS_COMMIT"))
+	systemProperty("pact.provider.tag", System.getenv("TRAVIS_BRANCH") == null ? "" : System.getenv("TRAVIS_BRANCH"))
+	systemProperty("pact.verifier.publishResults", System.getenv("PACT_BROKER_PUBLISH_VERIFICATION_RESULTS") == null ? "false" : "true")
 }
