--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ configurations {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	testCompile 'au.com.dius:pact-jvm-provider-junit5:4.0.10'
-	testCompile 'au.com.dius:pact-jvm-provider-spring:4.0.10'
+	testCompile 'au.com.dius.pact.provider:junit:4.1.8'
+	testCompile 'au.com.dius.pact.provider:junit5:4.1.8'
+	testCompile 'au.com.dius.pact.provider:spring:4.1.8'
 
 	runtimeOnly 'com.h2database:h2'
   compileOnly 'org.projectlombok:lombok'
