--- a/.github/workflows/contract_requiring_verification_published.yml
+++ b/.github/workflows/contract_requiring_verification_published.yml
@@ -34,11 +34,11 @@ jobs:
         if: ${{ github.event.client_payload.pact_url }}
         with:
           ref: ${{env.GIT_COMMIT}}
-      - uses: actions/setup-node@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          node-version: '16'
+          distribution: 'zulu' 
+          java-version: '11'
       - run: docker pull pactfoundation/pact-cli:latest
-      - name: Install
-        run: npm i
       - name: ${{env.DESCRIPTION}}
         run: make ci_webhook
