--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,10 @@ test {
 	systemProperty("pact.provider.version", System.getenv("GIT_COMMIT") == null ? "" : System.getenv("GIT_COMMIT"))
 	systemProperty("pact.provider.branch", System.getenv("GIT_BRANCH") == null ? "" : System.getenv("GIT_BRANCH"))
 	
+	// only publish verification results from CI allowing developers to run tests locally and debug, without affecting broker results
+	// only verification results from a known source (such at a commit in a VCS and a reproducible environment such as CI) should be published
+	systemProperty("pact.verifier.publishResults", System.getenv("PACT_BROKER_PUBLISH_VERIFICATION_RESULTS") == null ? "false" : "true")
+	
 	// Consumer version selectors for dynamically fetching pacts
 	// https://docs.pact.io/implementation_guides/jvm/provider/junit#selecting-the-pacts-to-verify-with-consumer-version-selectors-4314
 	// Runs when the provider code changes
