--- a/.github/workflows/contract_requiring_verification_published.yml
+++ b/.github/workflows/contract_requiring_verification_published.yml
@@ -28,15 +28,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout default branch if user manually provides pact URL
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         if: ${{ github.event.inputs.PACT_URL }}
-      - name: checkout specific SHA if webhook providers pact URL
-        uses: actions/checkout@v3
+      - name: checkout specific SHA if webhook provides pact URL
+        uses: actions/checkout@v4
         if: ${{ github.event.client_payload.pact_url }}
         with:
           ref: ${{env.GIT_COMMIT}}
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu' 
           java-version: '11'
