--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ test {
 
 	// required variables for fetching dynamic pacts, & publishing verification results
 	systemProperty("pact.provider.version", System.getenv("GIT_COMMIT") == null ? "" : System.getenv("GIT_COMMIT"))
-	// systemProperty("pact.provider.branch", System.getenv("GIT_BRANCH") == null ? "" : System.getenv("GIT_BRANCH"))
+	systemProperty("pact.provider.branch", System.getenv("GIT_BRANCH") == null ? "" : System.getenv("GIT_BRANCH"))
 	
 	// only publish verification results from CI allowing developers to run tests locally and debug, without affecting broker results
 	// only verification results from a known source (such at a commit in a VCS and a reproducible environment such as CI) should be published
