--- a/.github/workflows/contract_requiring_verification_published.yml
+++ b/.github/workflows/contract_requiring_verification_published.yml
@@ -14,10 +14,10 @@ on:
         required: true
 
 env:
-  PACT_BROKER_BASE_URL: https://test.pactflow.io
+  PACT_BROKER_BASE_URL: https://testdemo.pactflow.io
   PACT_BROKER_TOKEN: ${{ secrets.PACTFLOW_TOKEN_FOR_CI_CD_WORKSHOP }}
   PACT_BROKER_PUBLISH_VERIFICATION_RESULTS: true
-  PACT_BROKER_HOST: test.pactflow.io # For pact-jvm
+  PACT_BROKER_HOST: testdemo.pactflow.io # For pact-jvm
   PACT_URL: ${{ github.event.client_payload.pact_url }}
   GIT_COMMIT: ${{ github.event.client_payload.sha }}
   GIT_BRANCH: ${{ github.event.client_payload.branch }}
